bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:4: error: value or is not a member of Boolean
    if (hour<=7 or hour>=20) {
                ^