bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  var probleme:Boolean=false
  if (talking) {
    if (hour<=7 or hour>=20) {
      probleme=true
    }
  }
  return probleme
  }